--- a/infrastructure/security-groups.yaml
+++ b/infrastructure/security-groups.yaml
@@ -1,6 +1,6 @@
 Description: >
     This template contains the security groups required by our entire stack.
-    We create them in a seperate nested template, so they can be referenced
+    We create them in a separate nested template, so they can be referenced
     by all of the other nested templates.
 
 Parameters:
@@ -29,7 +29,7 @@ Resources:
                   IpProtocol: -1
             Tags: 
                 - Key: Name
-                  Value: !Sub ${EnvironmentName}-ECS-Hosts
+                  Value: !Join [ "-", [TeamCity, !Ref EnvironmentName, ECSHosts ] ]
 
     # This security group defines who/where is allowed to access the Application Load Balancer.
     # By default, we've opened this up to the public internet (0.0.0.0/0) but can you restrict
@@ -45,7 +45,7 @@ Resources:
                   IpProtocol: -1
             Tags: 
                 - Key: Name
-                  Value: !Sub ${EnvironmentName}-LoadBalancers
+                  Value: !Join [ "-", [TeamCity, !Ref EnvironmentName, LoadBalancers ] ]
 
 Outputs:
 
