--- a/master.yaml
+++ b/master.yaml
@@ -21,7 +21,9 @@ Resources:
                 EnvironmentName:    !Ref AWS::StackName
                 VpcCIDR:            10.180.0.0/16
                 PublicSubnet1CIDR:  10.180.8.0/21
+                PublicSubnet2CIDR:  10.180.16.0/21
                 PrivateSubnet1CIDR: 10.180.24.0/21
+                PrivateSubnet2CIDR: 10.180.32.0/21
 
     SecurityGroups:
         Type: AWS::CloudFormation::Stack
@@ -30,16 +32,16 @@ Resources:
             Parameters:
                 EnvironmentName: !Ref AWS::StackName
                 VPC: !GetAtt VPC.Outputs.VPC
-#
-#    ALB:
-#        Type: AWS::CloudFormation::Stack
-#        Properties:
-#            TemplateURL: https://s3.amazonaws.com/tc-tf-test.jetbrains.com/infrastructure/load-balancers.yaml
-#            Parameters:
-#                EnvironmentName: !Ref AWS::StackName
-#                VPC: !GetAtt VPC.Outputs.VPC
-#                Subnets: !GetAtt VPC.Outputs.PublicSubnets
-#                SecurityGroup: !GetAtt SecurityGroups.Outputs.LoadBalancerSecurityGroup
+
+    ALB:
+        Type: AWS::CloudFormation::Stack
+        Properties:
+            TemplateURL: https://s3.amazonaws.com/tc-tf-test.jetbrains.com/infrastructure/load-balancers.yaml
+            Parameters:
+                EnvironmentName: !Ref AWS::StackName
+                VPC: !GetAtt VPC.Outputs.VPC
+                Subnets: !GetAtt VPC.Outputs.PublicSubnets
+                SecurityGroup: !GetAtt SecurityGroups.Outputs.LoadBalancerSecurityGroup
 #
 #    ECS:
 #        Type: AWS::CloudFormation::Stack
