--- a/master.yaml
+++ b/master.yaml
@@ -55,36 +55,18 @@ Resources:
                 SecurityGroup: !GetAtt SecurityGroups.Outputs.ECSHostSecurityGroup
                 Subnets: !GetAtt VPC.Outputs.PrivateSubnets
 
-##    ProductService:
-##        Type: AWS::CloudFormation::Stack
-##        Properties:
-##            TemplateURL: https://s3.amazonaws.com/tc-tf-test.jetbrains.com/services/product-service/service.yaml
-##            Parameters:
-##                VPC: !GetAtt VPC.Outputs.VPC
-##                Cluster: !GetAtt ECS.Outputs.Cluster
-##                DesiredCount: 2
-##                Listener: !GetAtt ALB.Outputs.Listener
-##                Path: /products
-##
-##    WebsiteService:
-##        Type: AWS::CloudFormation::Stack
-##        Properties:
-##            TemplateURL: https://s3.amazonaws.com/tc-tf-test.jetbrains.com/services/website-service/service.yaml
-##            Parameters:
-##                VPC: !GetAtt VPC.Outputs.VPC
-##                Cluster: !GetAtt ECS.Outputs.Cluster
-##                DesiredCount: 2
-##                ProductServiceUrl: !Join [ "/", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "products" ]]
-##                Listener: !GetAtt ALB.Outputs.Listener
-##                Path: /
-#
-#
-#Outputs:
-#
-#    ProductServiceUrl:
-#        Description: The URL endpoint for the product service
-#        Value: !Join [ "/", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "products" ]]
-#
-#    WebsiteServiceUrl:
-#        Description: The URL endpoint for the website service
-#        Value: !Join ["", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "/" ]]
+    TeamCityServer:
+        Type: AWS::CloudFormation::Stack
+        Properties:
+            TemplateURL: https://s3.amazonaws.com/tc-tf-test.jetbrains.com/teamcity/server.yaml
+            Parameters:
+                VPC: !GetAtt VPC.Outputs.VPC
+                Cluster: !GetAtt ECS.Outputs.Cluster
+                DesiredCount: 1
+                Listener: !GetAtt ALB.Outputs.Listener
+                Path: /*
+
+Outputs:
+    TeamCityServerUrl:
+        Description: The TeamCity Server endpoint
+        Value: !Join ["", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "/" ]]
